Added loading the list of comic months and years from the db [#1725]